update 3/05/2025