@@ -4,12 +4,15 @@ import com.example.HotelBooking.dtos.Response;
 import com.example.HotelBooking.dtos.RoomDTO;
 import com.example.HotelBooking.entities.Room;
 import com.example.HotelBooking.enums.RoomType;
+import com.example.HotelBooking.exceptions.InvalidBookingStateAndDateException;
+import com.example.HotelBooking.exceptions.NotFoundException;
 import com.example.HotelBooking.respositories.RoomRepository;
 import com.example.HotelBooking.services.RoomService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.angus.mail.imap.protocol.UID;
 import org.modelmapper.ModelMapper;
+import org.modelmapper.TypeToken;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -17,6 +20,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.File;
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -105,14 +109,14 @@ public class RoomServiceImpl implements RoomService {
                 .status(200)
                 .message("Delete success")
 
-                .build();;
+                .build();
     }
 
     @Override
     public Response GetAvailableRoom(LocalDate checkInDate, LocalDate checkOutDate, RoomType roomType) {
        //Vallidation : ensure check in Data is not before today
         if(checkInDate.isBefore(LocalDate.now())){
-            throw new InvalidBookingStateAndDateException("check in date must be before today");
+            throw new InvalidBookingStateAndDateException("check in date cannot be before today");
         }
         //Validation : ennsure check Out date is not before check in date
         if(checkOutDate.isBefore(checkInDate)){
@@ -123,7 +127,7 @@ public class RoomServiceImpl implements RoomService {
             throw new InvalidBookingStateAndDateException("Check In date cannot be equal to check out date");
         }
         List<Room> roomList=roomRepository.findAvailableRooms(checkInDate,checkOutDate,roomType);
-        List<RoomDTO> roomDTOList=modelMapper.map(roomList,new TypeToken<List<RoomDTO>>(){}.getType())
+        List<RoomDTO> roomDTOList=modelMapper.map(roomList,new TypeToken<List<RoomDTO>>(){}.getType());
         return Response.builder()
                 .status(200)
                 .message("success")
@@ -133,12 +137,19 @@ public class RoomServiceImpl implements RoomService {
 
     @Override
     public List<RoomType> getAllRoomTye() {
-        return List.of();
+        return Arrays.asList(RoomType.values());
     }
 
     @Override
     public Response searchRoom(String input) {
-        return null;
+        List<Room> roomList=roomRepository.searchRooms(input);
+        List<RoomDTO> roomDTOList=modelMapper.map(roomList,new TypeToken<List<RoomDTO>>(){}.getType());
+        return Response.builder()
+                .status(200)
+                .message("success")
+                .rooms(roomDTOList)
+                .build();
+
     }
     //Save Image to Directory
     private String saveImage(MultipartFile imageFile){
